PE-1: add isReplace parameter for update config
