# features/config/test/src/test/resources/swagger.generated.json
@@ -1,459 +1,1 @@
-{
-  "openapi" : "3.0.1",
-  "info" : {
-    "title" : "OpenNMS Model",
-    "description" : "OpenNMS Data Model",
-    "version" : "1.0.0"
-  },
-  "paths" : {
-    "/VacuumdConfiguration" : {
-      "get" : {
-        "tags" : [ "VacuumdConfiguration" ],
-        "summary" : "Get VacuumdConfiguration configIds",
-        "responses" : {
-          "200" : {
-            "description" : "configIds",
-            "content" : {
-              "application/json" : {
-                "schema" : {
-                  "type" : "array",
-                  "items" : {
-                    "type" : "string"
-                  }
-                }
-              }
-            }
-          },
-          "400" : {
-            "description" : "Error message",
-            "content" : {
-              "application/json" : {
-                "schema" : {
-                  "type" : "object",
-                  "properties" : {
-                    "message" : {
-                      "type" : "string"
-                    }
-                  }
-                }
-              }
-            }
-          }
-        }
-      }
-    },
-    "/VacuumdConfiguration/{configId}" : {
-      "get" : {
-        "tags" : [ "VacuumdConfiguration" ],
-        "summary" : "Get VacuumdConfiguration configuration",
-        "parameters" : [ {
-          "name" : "configId",
-          "in" : "path",
-          "required" : true,
-          "schema" : {
-            "type" : "string"
-          }
-        } ],
-        "responses" : {
-          "200" : {
-            "description" : "VacuumdConfiguration configuration",
-            "content" : {
-              "application/json" : {
-                "schema" : {
-                  "$ref" : "#/components/schemas/VacuumdConfiguration"
-                }
-              }
-            }
-          },
-          "400" : {
-            "description" : "Error message",
-            "content" : {
-              "application/json" : {
-                "schema" : {
-                  "type" : "object",
-                  "properties" : {
-                    "message" : {
-                      "type" : "string"
-                    }
-                  }
-                }
-              }
-            }
-          }
-        }
-      },
-      "put" : {
-        "tags" : [ "VacuumdConfiguration" ],
-        "summary" : "Overwrite VacuumdConfiguration configuration",
-        "parameters" : [ {
-          "name" : "configId",
-          "in" : "path",
-          "required" : true,
-          "schema" : {
-            "type" : "string"
-          }
-        } ],
-        "requestBody" : {
-          "content" : {
-            "application/json" : {
-              "schema" : {
-                "$ref" : "#/components/schemas/VacuumdConfiguration"
-              }
-            }
-          }
-        },
-        "responses" : {
-          "200" : {
-            "description" : "empty"
-          },
-          "400" : {
-            "description" : "Error message",
-            "content" : {
-              "application/json" : {
-                "schema" : {
-                  "type" : "object",
-                  "properties" : {
-                    "message" : {
-                      "type" : "string"
-                    }
-                  }
-                }
-              }
-            }
-          }
-        }
-      },
-      "post" : {
-        "tags" : [ "VacuumdConfiguration" ],
-        "summary" : "Add VacuumdConfiguration configuration",
-        "parameters" : [ {
-          "name" : "configId",
-          "in" : "path",
-          "required" : true,
-          "schema" : {
-            "type" : "string"
-          }
-        } ],
-        "requestBody" : {
-          "content" : {
-            "application/json" : {
-              "schema" : {
-                "$ref" : "#/components/schemas/VacuumdConfiguration"
-              }
-            }
-          }
-        },
-        "responses" : {
-          "200" : {
-            "description" : "empty"
-          },
-          "400" : {
-            "description" : "Error message",
-            "content" : {
-              "application/json" : {
-                "schema" : {
-                  "type" : "object",
-                  "properties" : {
-                    "message" : {
-                      "type" : "string"
-                    }
-                  }
-                }
-              }
-            }
-          }
-        }
-      },
-      "delete" : {
-        "tags" : [ "VacuumdConfiguration" ],
-        "summary" : "Delete VacuumdConfiguration configuration",
-        "parameters" : [ {
-          "name" : "configId",
-          "in" : "path",
-          "required" : true,
-          "schema" : {
-            "type" : "string"
-          }
-        } ],
-        "responses" : {
-          "200" : {
-            "description" : "empty"
-          },
-          "400" : {
-            "description" : "Error message",
-            "content" : {
-              "application/json" : {
-                "schema" : {
-                  "type" : "object",
-                  "properties" : {
-                    "message" : {
-                      "type" : "string"
-                    }
-                  }
-                }
-              }
-            }
-          }
-        }
-      }
-    }
-  },
-  "components" : {
-    "schemas" : {
-      "VacuumdConfiguration" : {
-        "required" : [ "period" ],
-        "type" : "object",
-        "properties" : {
-          "period" : {
-            "minimum" : 1,
-            "type" : "number",
-            "description" : "how often to vacuum the database in\n          seconds"
-          },
-          "statement" : {
-            "type" : "array",
-            "items" : {
-              "$ref" : "#/components/schemas/statement"
-            }
-          },
-          "automations" : {
-            "$ref" : "#/components/schemas/automations"
-          },
-          "triggers" : {
-            "$ref" : "#/components/schemas/triggers"
-          },
-          "actions" : {
-            "$ref" : "#/components/schemas/actions"
-          },
-          "auto-events" : {
-            "$ref" : "#/components/schemas/auto-events"
-          },
-          "action-events" : {
-            "$ref" : "#/components/schemas/action-events"
-          }
-        },
-        "description" : "Top-level element for the vacuumd-configuration.xml\n      configuration file."
-      },
-      "statement" : {
-        "type" : "object",
-        "properties" : {
-          "transactional" : {
-            "type" : "boolean",
-            "default" : true
-          },
-          "statement" : {
-            "type" : "string"
-          }
-        },
-        "description" : "Just a generic string used for SQL\n      statements"
-      },
-      "automations" : {
-        "type" : "object",
-        "properties" : {
-          "automation" : {
-            "type" : "array",
-            "items" : {
-              "$ref" : "#/components/schemas/automation"
-            }
-          }
-        }
-      },
-      "automation" : {
-        "required" : [ "action-name", "date", "dateTime", "name", "positiveInterval" ],
-        "type" : "object",
-        "properties" : {
-          "date" : {
-            "type" : "string",
-            "description" : "date doc",
-            "format" : "date"
-          },
-          "dateTime" : {
-            "type" : "string",
-            "description" : "dateTime doc",
-            "format" : "date-time"
-          },
-          "action-name" : {
-            "type" : "string",
-            "description" : "reference an action from the collection of\n          actions"
-          },
-          "trigger-name" : {
-            "type" : "string",
-            "description" : "reference a trigger from the collection of\n          triggers"
-          },
-          "positiveInterval" : {
-            "minimum" : 1,
-            "type" : "integer",
-            "description" : "positiveInterval doc",
-            "format" : "int32",
-            "default" : 10
-          },
-          "auto-event-name" : {
-            "type" : "string",
-            "description" : "specify an event UEI to send"
-          },
-          "name" : {
-            "type" : "string",
-            "description" : "The name of this automation",
-            "default" : "name"
-          },
-          "action-event" : {
-            "type" : "string",
-            "description" : "Create an Event from Result of Trigger"
-          },
-          "active" : {
-            "type" : "boolean",
-            "description" : "enable/disable this automation"
-          },
-          "interval" : {
-            "type" : "integer",
-            "description" : "How often should this automation run",
-            "format" : "int32"
-          }
-        },
-        "description" : "Triggers and Actions hooked up and run by the Vacuumd\n      schedule using interval for frequency"
-      },
-      "triggers" : {
-        "type" : "object",
-        "properties" : {
-          "trigger" : {
-            "type" : "array",
-            "items" : {
-              "$ref" : "#/components/schemas/trigger"
-            }
-          }
-        },
-        "description" : "A collection of triggers"
-      },
-      "trigger" : {
-        "required" : [ "name" ],
-        "type" : "object",
-        "properties" : {
-          "operator" : {
-            "pattern" : "(<|<=|=|>=|>)",
-            "type" : "string",
-            "description" : "only run the action if the row count evaluates with\n          the operator (defaults to > 0)"
-          },
-          "row-count" : {
-            "type" : "integer",
-            "format" : "int32"
-          },
-          "name" : {
-            "type" : "string"
-          },
-          "data-source" : {
-            "type" : "string",
-            "default" : "opennms"
-          },
-          "statement" : {
-            "$ref" : "#/components/schemas/statement"
-          }
-        },
-        "description" : "A query to the database with a resultset used for\n      actions"
-      },
-      "actions" : {
-        "type" : "object",
-        "properties" : {
-          "action" : {
-            "type" : "array",
-            "items" : {
-              "$ref" : "#/components/schemas/action"
-            }
-          }
-        },
-        "description" : "A collection of actions"
-      },
-      "action" : {
-        "required" : [ "name" ],
-        "type" : "object",
-        "properties" : {
-          "name" : {
-            "type" : "string"
-          },
-          "data-source" : {
-            "type" : "string",
-            "default" : "opennms"
-          },
-          "statement" : {
-            "$ref" : "#/components/schemas/statement"
-          }
-        },
-        "description" : "actions modify the database based on results of a\n      trigger"
-      },
-      "auto-events" : {
-        "type" : "object",
-        "properties" : {
-          "auto-event" : {
-            "type" : "array",
-            "items" : {
-              "$ref" : "#/components/schemas/auto-event"
-            }
-          }
-        }
-      },
-      "auto-event" : {
-        "required" : [ "name" ],
-        "type" : "object",
-        "properties" : {
-          "fields" : {
-            "type" : "string"
-          },
-          "name" : {
-            "type" : "string"
-          },
-          "uei" : {
-            "type" : "string"
-          }
-        },
-        "description" : "(THIS IS BEING DEPRECATED) actions modify the database based on results of a\n      trigger"
-      },
-      "action-events" : {
-        "type" : "object",
-        "properties" : {
-          "action-event" : {
-            "type" : "array",
-            "items" : {
-              "$ref" : "#/components/schemas/action-event"
-            }
-          }
-        }
-      },
-      "action-event" : {
-        "required" : [ "name" ],
-        "type" : "object",
-        "properties" : {
-          "add-all-parms" : {
-            "type" : "boolean",
-            "default" : false
-          },
-          "name" : {
-            "type" : "string"
-          },
-          "for-each-result" : {
-            "type" : "boolean",
-            "default" : false
-          },
-          "assignment" : {
-            "type" : "array",
-            "items" : {
-              "$ref" : "#/components/schemas/assignment"
-            }
-          }
-        }
-      },
-      "assignment" : {
-        "required" : [ "name", "type", "value" ],
-        "type" : "object",
-        "properties" : {
-          "type" : {
-            "type" : "string"
-          },
-          "value" : {
-            "type" : "string"
-          },
-          "name" : {
-            "type" : "string"
-          }
-        }
-      }
-    }
-  }
-}
+{"openapi":"3.0.1","info":{"title":"OpenNMS Model","description":"OpenNMS Data Model","version":"1.0.0"},"paths":{"/VacuumdConfiguration":{"get":{"tags":["VacuumdConfiguration"],"summary":"Get VacuumdConfiguration configIds","responses":{"200":{"description":"configIds","content":{"application/json":{"schema":{"type":"array","items":{"type":"string"}}}}},"400":{"description":"Error message","content":{"application/json":{"schema":{"type":"object","properties":{"message":{"type":"string"}}}}}}}}},"/VacuumdConfiguration/{configId}":{"get":{"tags":["VacuumdConfiguration"],"summary":"Get VacuumdConfiguration configuration","parameters":[{"name":"configId","in":"path","required":true,"schema":{"type":"string"}}],"responses":{"200":{"description":"VacuumdConfiguration configuration","content":{"application/json":{"schema":{"$ref":"#/components/schemas/VacuumdConfiguration"}}}},"400":{"description":"Error message","content":{"application/json":{"schema":{"type":"object","properties":{"message":{"type":"string"}}}}}}}},"put":{"tags":["VacuumdConfiguration"],"summary":"Overwrite VacuumdConfiguration configuration","parameters":[{"name":"configId","in":"path","required":true,"schema":{"type":"string"}},{"name":"replace","in":"query","description":"Set to true for replace the whole config","schema":{"type":"boolean"}}],"requestBody":{"content":{"application/json":{"schema":{"$ref":"#/components/schemas/VacuumdConfiguration"}}}},"responses":{"200":{"description":"empty"},"400":{"description":"Error message","content":{"application/json":{"schema":{"type":"object","properties":{"message":{"type":"string"}}}}}}}},"post":{"tags":["VacuumdConfiguration"],"summary":"Add VacuumdConfiguration configuration","parameters":[{"name":"configId","in":"path","required":true,"schema":{"type":"string"}}],"requestBody":{"content":{"application/json":{"schema":{"$ref":"#/components/schemas/VacuumdConfiguration"}}}},"responses":{"200":{"description":"empty"},"400":{"description":"Error message","content":{"application/json":{"schema":{"type":"object","properties":{"message":{"type":"string"}}}}}}}},"delete":{"tags":["VacuumdConfiguration"],"summary":"Delete VacuumdConfiguration configuration","parameters":[{"name":"configId","in":"path","required":true,"schema":{"type":"string"}}],"responses":{"200":{"description":"empty"},"400":{"description":"Error message","content":{"application/json":{"schema":{"type":"object","properties":{"message":{"type":"string"}}}}}}}}}},"components":{"schemas":{"VacuumdConfiguration":{"required":["period"],"type":"object","properties":{"period":{"minimum":1,"type":"number","description":"how often to vacuum the database in\n          seconds"},"statement":{"type":"array","items":{"$ref":"#/components/schemas/statement"}},"automations":{"$ref":"#/components/schemas/automations"},"triggers":{"$ref":"#/components/schemas/triggers"},"actions":{"$ref":"#/components/schemas/actions"},"auto-events":{"$ref":"#/components/schemas/auto-events"},"action-events":{"$ref":"#/components/schemas/action-events"}},"description":"Top-level element for the vacuumd-configuration.xml\n      configuration file."},"statement":{"type":"object","properties":{"transactional":{"type":"boolean","default":true},"statement":{"type":"string"}},"description":"Just a generic string used for SQL\n      statements"},"automations":{"type":"object","properties":{"automation":{"type":"array","items":{"$ref":"#/components/schemas/automation"}}}},"automation":{"required":["action-name","date","dateTime","name","positiveInterval"],"type":"object","properties":{"date":{"type":"string","description":"date doc","format":"date"},"dateTime":{"type":"string","description":"dateTime doc","format":"date-time"},"action-name":{"type":"string","description":"reference an action from the collection of\n          actions"},"trigger-name":{"type":"string","description":"reference a trigger from the collection of\n          triggers"},"positiveInterval":{"minimum":1,"type":"integer","description":"positiveInterval doc","format":"int32","default":10},"auto-event-name":{"type":"string","description":"specify an event UEI to send"},"name":{"type":"string","description":"The name of this automation","default":"name"},"action-event":{"type":"string","description":"Create an Event from Result of Trigger"},"active":{"type":"boolean","description":"enable/disable this automation"},"interval":{"type":"integer","description":"How often should this automation run","format":"int32"}},"description":"Triggers and Actions hooked up and run by the Vacuumd\n      schedule using interval for frequency"},"triggers":{"type":"object","properties":{"trigger":{"type":"array","items":{"$ref":"#/components/schemas/trigger"}}},"description":"A collection of triggers"},"trigger":{"required":["name"],"type":"object","properties":{"operator":{"pattern":"(<|<=|=|>=|>)","type":"string","description":"only run the action if the row count evaluates with\n          the operator (defaults to > 0)"},"row-count":{"type":"integer","format":"int32"},"name":{"type":"string"},"data-source":{"type":"string","default":"opennms"},"statement":{"$ref":"#/components/schemas/statement"}},"description":"A query to the database with a resultset used for\n      actions"},"actions":{"type":"object","properties":{"action":{"type":"array","items":{"$ref":"#/components/schemas/action"}}},"description":"A collection of actions"},"action":{"required":["name"],"type":"object","properties":{"name":{"type":"string"},"data-source":{"type":"string","default":"opennms"},"statement":{"$ref":"#/components/schemas/statement"}},"description":"actions modify the database based on results of a\n      trigger"},"auto-events":{"type":"object","properties":{"auto-event":{"type":"array","items":{"$ref":"#/components/schemas/auto-event"}}}},"auto-event":{"required":["name"],"type":"object","properties":{"fields":{"type":"string"},"name":{"type":"string"},"uei":{"type":"string"}},"description":"(THIS IS BEING DEPRECATED) actions modify the database based on results of a\n      trigger"},"action-events":{"type":"object","properties":{"action-event":{"type":"array","items":{"$ref":"#/components/schemas/action-event"}}}},"action-event":{"required":["name"],"type":"object","properties":{"add-all-parms":{"type":"boolean","default":false},"name":{"type":"string"},"for-each-result":{"type":"boolean","default":false},"assignment":{"type":"array","items":{"$ref":"#/components/schemas/assignment"}}}},"assignment":{"required":["name","type","value"],"type":"object","properties":{"type":{"type":"string"},"value":{"type":"string"},"name":{"type":"string"}}}}}}
